Format all Java code